test(it): fix IT review issues: stop guard, ARN precision, precondition assertion
- WildcardRevocationOnTableRemovalIT: remove isRunning() TOCTOU guard — stop unconditionally when non-null (mirrors tearDown pattern)
- GrantablePermissionPropagationIT: use full ARN equals() instead of contains(), add precondition assertion that the pipeline produced a non-grantable grant before asserting it is non-grantable, switch to Stream.toList()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>